app_lifecycle.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment 
  labels:
    app: app1
    tier: FE
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp-pod
        tier: FE
    spec:
      containers:
      - name: nginx
        image: nginx 
  selector:
    matchLabels:
      app: myapp-pod
      tier: FE
