env_variables.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: app1
    tier: FE 
spec:
  containers:
  - name: nginx 
    image: nginx
