initcontainer.yml
apiVersion: v1
kind: Pod
metadata:
  name: red
spec:
  containers:
  - name: busybox
    image: busybox:1.28
