multi-cont.yml
apiVersion: v1
kind: Pod
metadata:
  name: yellow
  namespace: default
spec:
  containers:
  - name: lemon
    image: busybox
  - name: gold
    image: redis
