multicontaners.yml
apiVersion: v1
kind: Pod
metadata:
  name: multicontainer-pod
  labels:
    app: app1
    tier: FE 
spec:
  containers:
  - name: busybox 
    image: busybox
    command: ["sh" , "-c" , "echo the app is running! && sleep 100"]
  initcontainers:
  - name: init-container
    image: busybox 
    command: ["sh" , "-c" , "echo wait untill this is done"]
