nodeaffinity.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: app1
    tier: FE 
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: size
            operator: In
            values:
            - Large
            - Medium 
  containers:
  - name: alpine
    image: alpine 



# requiredDuringSchedulingIgnoredDuringExecution
# preferedDuringSchedulingIgnoredDuringExecution
