psql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: psql
  labels:
    role: query-dbs
spec:
  containers:
    - name: psql
      image: postgres:13.1
      command:
      - sh
      - -c
      - "sleep 9999999"
      securityContext:
        allowPrivilegeEscalation: false
        runAsUser: 1001
