secrets.yml
apiVersion: v1
kind: Secret
metadata:
  name: my-secret
data:
  USERNAME: <encodedbase64 value which is hashed >
  PASSWORD: <encoded base 64 value which is hashed >


# Pod to inject secret values


apiVersion: v1
kind: Pod
matadata:
  name: myapp
  labels:
    app: app1
    tier: FE 
spec:
  containers:
  - name: nginx 
    image: nginx 
    ports:
      - containerPort: 8080
