taints_tolerations.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: app1 
    tier: FE 
spec:
  containers:
  - name: nginx 
    image: nginx 
  tolerations:
  -  key: "app"
     operator: "Equal"
     value: "blue"
     effect: "NoSchedule"


# taint on node 

# kubectl taint nodes node1 app=blue:NoSchedule

#NoSchedule
#NoExecute
#PreferNoSchedule
