testvol.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
  - name: test-containers
    image: nginx:alpine
    volumeMount:
    - mountPath: /log 
      name: data-dir-vol
  volumes:
  - name: data-dir-vol
    hostPath:
      path: /var/log/test-logs
      type: Directory


apiVersion: v1
kind: PersistentVolume
metadata:
  name: my-pv-1
spec:
  accessModes:
  - readWriteOnce
  capacity:
    storage: 1Gi
  hostPath:
    path: /var/log 


apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: pvc-1
spec:
  accessModes:
  - readWriteOnce
  resources:
    requests:
      storage: 500Mi 


apiVersion: v1
kind: Pod
metadata:
  name: my-pod-with-pvc
spec:
  containers:
  - name: my-container
    image: nginx:alpine 
    volumeMount:
      mountPath:
        path: /log 
        name: myvol-for-pvc

  volumes:
  - name: myvol-for-pvc
    PersistentVolumeClaim:
      claimName: claim-1
